# graph-tool-poc2

./: README.md  bun.lockb  package.json
capture_windoww_app/: Cargo.toml
capture_windoww_app/src/: main.rs
graph-tool-poc2/: README.md  angular.json  bun.lockb  package-lock.json  package.json
graph-tool-poc2/src/: index.html  styles.scss
graph-tool-poc2/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  data.service.ts
graph-tool-poc2/src/app/clusters-view/: clusters-view.component.html  clusters-view.component.spec.ts  clusters-view.component.ts
graph-tool-poc2/src/app/file-view/: file-view.component.html  file-view.component.ts
graph-tool-poc2/src/app/image-dialog/: image-dialog.component.html  image-dialog.component.scss  image-dialog.component.ts
graph-tool-poc2/src/app/map-view/: edgeex.ts  map-view.component.html  map-view.component.ts  nodeex.ts
graph-tool-poc2/src/app/node-content-view/: node-content-view.component.html  node-content-view.component.scss  node-content-view.component.spec.ts  node-content-view.component.ts
graph-tool-poc2/src/app/node-edit-view/: node-edit-view.component.html  node-edit-view.component.scss  node-edit-view.component.spec.ts  node-edit-view.component.ts
graph-tool-server/: README.md  bun.lockb  config.json  index.ts  package.json
